crates/elenchus-parser/tests/snapshots/errors__var_default_with_a_non_boolean.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(\"VAR k DEFAULT maybe\\n\")"
---
RESULT: 1 syntax error

DEFAULT  (1 problem)
  syntax  : VAR <name> DEFAULT true|false
  example : VAR db_ready DEFAULT false
    line 1, col 15 - DEFAULT expects true or false
      | VAR k DEFAULT maybe
      |               ^^^^^
