crates/elenchus-parser/tests/snapshots/errors__var_trailing_text.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(\"VAR k extra\\n\")"
---
RESULT: 1 syntax error

VAR  (1 problem)
  syntax  : VAR <name> [DEFAULT true|false]
  example : VAR db_ready DEFAULT false
    line 1, col 6 - unexpected text after the VAR declaration
      | VAR k extra
      |      ^^^^^^
